--- a/Tetris/Pages/StartPopup.xaml
+++ b/Tetris/Pages/StartPopup.xaml
@@ -7,5 +7,8 @@
         Background="{x:Null}" xmlns:k="http://schemas.microsoft.com/kinect/2013">
     <Grid>
         <k:KinectCircleButton k:KinectCircleButton.Click="PlayButton_Click" Style="{StaticResource PlayButtonStyle}" Foreground="White" Height="300" Width="300" Label="Play" HorizontalAlignment="Center" Name="PlayButton" VerticalAlignment="Center" />
+        <Image Height="316" HorizontalAlignment="Left" Margin="154,202,0,0" Name="image1" Stretch="Uniform" VerticalAlignment="Top" Width="214" Source="/Tetris;component/Images/HandMove.png" />
+        <TextBlock Height="153" HorizontalAlignment="Left" Margin="89,524,0,0" Name="textBox1" VerticalAlignment="Top" Width="341" Text="Mover a mão em direcção ao ecrã (pressionar) para activar qualquer botão" FontSize="28" TextWrapping="Wrap" Foreground="White">
+        </TextBlock>
     </Grid>
 </Page>
