--- a/Tetris/Pages/GameOverHighscore.xaml
+++ b/Tetris/Pages/GameOverHighscore.xaml
@@ -6,20 +6,23 @@
         Width="1280" 
         Height="720"
         Background="{x:Null}">
-    <Grid>
-        <Grid Background="White" Margin="300,200,300,200">
+    <Grid k:KinectRegion.HandPointerMove="Kinect_HandPointerMove" k:KinectRegion.HandPointerGrip="Kinect_HandPointerGrip" Background="Transparent">
+        <Grid Background="White" Margin="250,200" >
             <Label HorizontalAlignment="Center" Name="gameover_label" Content="Game Over" FontSize="36" />
             <Label HorizontalAlignment="Center" Content="New highscore!" FontSize="20" Margin="268,55,260,228" Width="152" />
             <Label HorizontalAlignment="Center" Name="score" Content="0" FontSize="20" Margin="430,117,234,329" Width="192" />
             <Label HorizontalAlignment="Center" Content="Score: " FontSize="20" Margin="356,117,432,329" />
             <Ellipse Fill="White" Height="90" Width="90" Margin="0, -45" VerticalAlignment="Bottom"></Ellipse>
-            <k:KinectCircleButton k:KinectCircleButton.Click="onSubmit" Height="158" Width="158" LabelPosition="None" HorizontalAlignment="Center" Name="Submit" VerticalAlignment="Bottom" Margin="0,-79"/>
+            <k:KinectCircleButton k:KinectCircleButton.Click="onSubmit" Height="158" Width="158" LabelPosition="None" HorizontalAlignment="Center" Name="Submit" VerticalAlignment="Bottom" Margin="0,-79" Content="OK" />
             <Grid HorizontalAlignment="Center" Name="lettersGrid" Margin="150,85,150,50" Width="387">
                 <TextBlock Name="letter1" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" Margin="26,0,274,0" />
                 <TextBlock Name="letter2" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" />
                 <TextBlock Name="letter3" Background="LightGray" FontFamily="Segoe UI" FontSize="50" Height="76" HorizontalAlignment="Center" Text="A" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="87" Margin="274,0,26,0" />
             </Grid>
-            <TextBlock HorizontalAlignment="Center" TextAlignment="Justify" Margin="420,255,78,0" TextWrapping="Wrap" Text="Grab to submit your new highscore!" FontFamily="Segoe UI" FontSize="20" Width="182" />
+            <Image Height="233" Margin="604,80,18,0" Name="image1" Stretch="Uniform" VerticalAlignment="Top" Source="/Tetris;component/Images/HandLeftRight.png" />
+            <Image Height="234" HorizontalAlignment="Left" Margin="22,80,0,0" Name="image2" Stretch="Uniform" VerticalAlignment="Top" Width="159" Source="/Tetris;component/Images/HandDownUp.png" />
+            <TextBlock Height="70" HorizontalAlignment="Right" Margin="0,11,18,0" Name="textBlock1" Text="Mover para a direita ou esquerda para mudar o bloco" VerticalAlignment="Top" Width="158" FontSize="16" TextWrapping="Wrap" TextAlignment="Center" />
+            <TextBlock FontSize="16" Height="70" HorizontalAlignment="Left" Margin="22,11,0,0" Name="textBlock3" Text="Mover para cima ou baixo para percorrer o alfabeto" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" />
         </Grid>
     </Grid>
 </Page>
